# winix

./: .cppcheck  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  NEXT.md  README.md  Winix Contributor Guide  Winix Developer Quick Start  Winix Project Charter  Winix Project Overview  build.bat  cppcheck-suppressions.cfg  install.bat  uninstall.bat  winix.bat
.github/workflows/: ci.yml  release.yml
cmake/: gen_version.cmake
demo/: notes.txt  scores.txt  words.txt
docs/: CHANGELOG.md  build_instructions.md  coding_standards.md  design_spec.md  index.html  onboarding.md  testing_guide.md
docs/man/: awk  cat  cut  diff  echo  find  grep  gzip  head  ls  nix  printf  sed  sort  tail  tr  wc  wlint  wsim  wzip
src/: CMakeLists.txt
src/common/: argparser.c  fileops.c  nowildcard.c
src/coreutils/: alias.c  apropos.c  awk.c  b2sum.c  base32.c  base64.c  basename.c  bc.c  cat.c  chgrp.c  chmod.c  chown.c  cksum.c  clear.c  cmp.c  column.c  comm.c  cp.c  csplit.c  cut.c  date.c  dd.c  df.c  diff.c  dirname.c  du.c  echo.c  env.c  expand.c  export.c  expr.c  factor.c  false.c  find.c  fmt.c  fold.c  grep.c  grep.cpp  groups.c  gzip.c  (+86 more)
src/shell/: aliases.cpp  aliases.hpp  completion.cpp  completion.hpp  line_editor.cpp  line_editor.hpp  main.cpp  winix.rc
tests/: run_tests.py
